# ctg-wave

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Makefile  ORIGINAL_CTG.ipynb  README.md  cont_t_galerkin.py  convergence_dt_ctg_wave.py  convergence_h_ctg_wave.py  ctg_wave_sep.py  environment.yml  example_CTG_heat.py  example_CTG_wave.py  example_conv_CTG_heat.py  example_ctg_wave.py  pyproject.toml  test_install_ctg.py  tmp.py  utils.py
.github/workflows/: ci.yml
CTG/: Assembler.py  FE_spaces.py  assemble_XT.py  brownian_motion.py  ctg_hyperbolic.py  ctg_parabolic.py  ctg_solver.py  error.py  post_process.py  post_process_utils.py  utils.py
CTG_parabolic/: ctg_parabolic.py
ORIGINAL_FILES/: renoi.py
cont_t_galerkin/: utils.py
data/: data_param_wave_eq.py  data_pwe.yaml  data_swe.yaml  data_wave_eq.py  data_we.yaml  exact_solution_elliptic.py  exact_solution_heat.py  exact_solution_heat_2.py  exact_solution_wave.py  exact_solution_wave_sep.py  exact_solution_wave_sep2.py
data/meshes_square/: mesh_generate_squares.txt  mesh_square_128.h5  mesh_square_128.xdmf  mesh_square_16.h5  mesh_square_16.xdmf  mesh_square_256.xdmf  mesh_square_32.h5  mesh_square_32.xdmf  mesh_square_4.h5  mesh_square_4.xdmf  mesh_square_64.h5  mesh_square_64.xdmf  mesh_square_8.h5  mesh_square_8.xdmf
docs/: api.rst  conf.py  index.rst  intro.rst  requirements.txt
examples/: PWE_CTG_conv.py  PWE_CTG_example.py  PWE_example_ensamble.py  SWE_CTG_example.py  SWE_example_ensamble.py  WE_CTG_conv_dt.py  convergence_CTG_heat.py  example_CTG_heat.py  example_CTG_wave.py  example_conv_CTG_heat.py  generate_meshes_square.py  heat_CTG_conv.py  heat_CTG_example.py  plots_README.py  wave_CTG_conv_dt.py  wave_CTG_conv_x.py  wave_ctg_example.py
examples/data_examples/: data_swe.yaml  data_we.yaml  data_we_functions.py
scripts/: run_examples.sh
src/ctg/: Assembler.py  FE_spaces.py  brownian_motion.py  cli.py  config.py  ctg_solver.py  error.py  plotting.py  post_process.py  save_metadata.py  utils.py
src/ctg/default_data/: data_swe.yaml  data_swe_functions.py  data_we.yaml
tests/: __init__.py  conftest.py  test_Assembler.py  test_brownian_motion.py  test_cli.py  test_config.py  test_ctg_solver.py  test_error.py  test_fe_spaces.py  test_utils.py
tests/artifacts/: data_functions_pwe.py  data_pwe.yaml  data_swe.yaml  data_swe_test.yaml
tests/data_tests/: data_swe_test.yaml  data_swe_test_mini.yaml  data_we_test_mini.yaml
