[project]
name = "CTG"
version = "0.1.0"
description = "Continuous Time Galerkin space-time FEM for stochastic wave equations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Andrea Scaglioni"}]
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "pyyaml>=6",
  "numpy>=2",
  "scipy>=1.13",
  "matplotlib>=3.9",
]

[project.scripts]
ctg-wave = "ctg_wave.cli:app"
                                                                                
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q --cov=ctg_wave --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src/ctg"]
