[project]
name = "ctg-wave"
version = "0.1.0"
description = "Continuous Time Galerkin space-time FEM for stochastic wave equations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Andrea Scaglioni"}]

dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "pyyaml>=6",
  "numpy>=2",
  "scipy>=1.13",
  "matplotlib>=3.9",
]

[project.optional-dependencies]
# Development tools (testing, linting, formatting)
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.8",
  "black>=24",
  "mypy>=1.11",
  "pre-commit>=3",
]

# Documentation tools
docs = [
  "sphinx>=7.0",
  "pydata-sphinx-theme",
  "sphinx-autodoc-typehints",
  "sphinx-mdinclude",
  "sphinx-copybutton",
  "sphinxcontrib-spelling",
]

# All optional dependencies combined (convenience)
all = [
  "ctg-wave[dev,docs]",
]

[project.scripts]
ctg = "ctg.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ctg"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-v --cov=ctg --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.coverage.report]
omit = [
    "src/ctg/default_data/*",
    "src/ctg/plotting.py",
]
